--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,23 @@ a {
     grid-template-rows: repeat(auto, 1fr);
     grid-gap: 1rem 1rem;
 }
+.grid-card-store {
+    display: grid;
+    grid-area: container;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+    grid-gap: 1rem 1rem;
+}
+.grid-card-plans {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+    grid-gap: 1rem 1rem;
+    
+}
+/* .card-price {
+    display: flex;
+} */
 .center {
     text-align: center;
 }
@@ -71,7 +88,7 @@ figure img{
     height: 3rem;
 }
 nav {
-    background-color: #ffffffcc;
+    background-color: hsla(0, 0%, 100%, 0.9);
     backdrop-filter: blur(0.5rem);
     display: flex;
     align-items: center;
@@ -102,6 +119,7 @@ nav {
 }
 .hero .content {
     padding-top: 0.5rem;
+    margin: 0rem 10rem 0rem 10rem;
     text-align: center;
 }
 
@@ -243,7 +261,6 @@ table {
     table-layout: fixed;
     border-collapse: collapse;
     border: 0rem  solid#2c2c2c;
-    margin: 5rem 0rem 5rem 0rem;
     background: #fff;
     border-radius: 1rem;
  
@@ -251,9 +268,6 @@ table {
 td, th {
     padding: 1.5rem;
     border:  0rem solid #f5f5f525;
-}
-th .table-title {
-    padding-top: 20rem;
 }
 .table-feature {
     font-weight: 500;
@@ -404,8 +418,19 @@ textarea {
     object-fit: cover;
     object-position: 50% 50%;
 }
-
-
+.card-store {
+    background-color: #fff;
+    padding: 2rem;
+    text-align: center;
+    border-radius: 1rem;
+    overflow: hidden;
+}
+.card-store img {
+    width: 100%;
+    height: 14rem;
+    object-fit: cover;
+    object-position: 50% 50%;
+}
 .card-text {
     padding: 4rem;
     background-color: #ffffff;
@@ -430,12 +455,6 @@ textarea {
     display: flex;
     justify-content: space-around;
 } */
-
-.store-layout {
-    display: grid;
-    grid-template-columns: auto auto; 
-    grid-gap: 4rem 4rem;
-}
 .team-layout {
     display: grid;
     grid-template-columns: auto auto auto auto; 
@@ -445,13 +464,13 @@ textarea {
 .gap-tb-item-025 {
     margin: 0.25rem 0 0.25rem 0;
 }
-.spacing-item-1 {
+.gap-tb-item-1 {
     margin: 1rem 0rem 1rem 0rem;
 }
-.spacing-item-2 {
+.gap-tb-item-2 {
     margin: 2rem 0rem 2rem 0rem;
 }
-.spacing-item-3 {
+.gap-tb-item-3 {
     margin: 3rem 0rem 3rem 0rem;
 }
 /*content*/
