--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,9 @@ a {
     color: #1d1d1d;
     cursor: pointer;
 }
-/*layout*/
+
+    
+    /*layout*/
 .container {
     margin-left: 7%;
     margin-right: 7%;
@@ -32,39 +34,27 @@ a {
     align-items: center;
     flex-basis: 10rem;
 }
-.grid-card-home-x3 {
+.grid-card-x2 {
     display: grid;
-    grid-template-columns: 30% 30% 30%;
-    grid-column-gap: 3rem;
-    justify-content:space-between;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+    grid-gap: 1rem 1rem;   
 }
-.grid-card-home-x2 {
+.grid-card-x3 {
     display: grid;
-    grid-template-columns: 48% 48%;
-    grid-column-gap: 3rem;
-    justify-content:space-between;
+    grid-area: container;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+    grid-gap: 1rem 1rem;
 }
-.grid-card-product {
+.grid-card-x4 {
     display: grid;
     grid-area: container;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(auto, 1fr);
     grid-gap: 1rem 1rem;
 }
-.grid-card-store {
-    display: grid;
-    grid-area: container;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(auto, 1fr);
-    grid-gap: 1rem 1rem;
-}
-.grid-card-plans {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(auto, 1fr);
-    grid-gap: 1rem 1rem;
-    
-}
+
 /* .card-price {
     display: flex;
 } */
@@ -110,7 +100,7 @@ nav {
     height: 40rem;  
 }
 
-.hero-page-input{
+.hero-page{
     background-image: url(../image/hero-1.svg);
     background-size: cover;
     background-position: 100% 50%;
@@ -120,21 +110,6 @@ nav {
 .hero .content {
     padding-top: 0.5rem;
     margin: 0rem 10rem 0rem 10rem;
-    text-align: center;
-}
-
-.hero-search{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.9),rgba(255, 217, 0, 0.2)), url(../image/hero-search.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 20rem;
-    text-align: center;
-}
-.hero-team{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.9),rgba(255, 217, 0, 0.2)), url(../image/hero-team.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 20rem;
     text-align: center;
 }
 .hero-help{
@@ -309,7 +284,7 @@ input {
     height: 35px;
     outline: none;
     font-size: 1rem;
-    font-weight: 200;
+    font-weight: 400;
     padding: 0.8rem 12rem 0.8rem 1.2rem;
     border-radius: 15px;
     border: 0.1rem solid #e0e0e0;
@@ -455,11 +430,11 @@ textarea {
     display: flex;
     justify-content: space-around;
 } */
-.team-layout {
+/* .team-layout {
     display: grid;
     grid-template-columns: auto auto auto auto; 
     grid-gap: 4rem 4rem;
-}
+} */
 /*spacing*/
 .gap-tb-item-025 {
     margin: 0.25rem 0 0.25rem 0;
@@ -532,3 +507,95 @@ footer {
     font-weight: 600;
     color: #303030;
 }
+
+@media (max-width: 600px) {
+   
+    .container-hero{
+        width: 100%;
+    }
+     .hero-background-home {
+        border-radius: 2rem;
+        background-image: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.4)), url(/image/hero-home.jpg);
+        background-position: 88% 50%;
+        background-color: #fff;
+        box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 40rem;  
+    }
+    hero-page {
+        border-radius: 1rem;
+    } 
+    .hero-home {
+        padding-top: 4rem;
+        display: flex;
+        align-items: center;
+    }
+    .hero-home button {
+        width: 100%;
+    }
+    .hero .content {
+        padding-top: 0.5rem;
+        margin: 0rem 3rem 0rem 3rem;
+        text-align: center;
+    }
+    .grid-card-x4 {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .grid-card-x3 {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .grid-card-x2 {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .card-wide a{
+        display: inline; 
+    }
+    .footer-box {
+        display: inline;
+    }
+   
+    .logos img{
+        display: inline;
+        height: 2rem;
+        width: 100%;
+        margin: 1rem;
+        object-fit:fill;
+    }
+    
+    .logos{
+        display: flex;
+    }
+    footer {
+        border-top-left-radius: 2rem;
+        border-top-right-radius: 2rem;
+    }
+    .footer-box div {
+        margin: 1rem;
+    }
+    .table{
+	    overflow-y: hidden;
+        overflow-x: auto;
+        border-radius: 1rem;
+    }
+    table {
+        width: 800px;
+    }
+    .title {
+        font-size: 24px;
+    }
+    .title-s{
+        font-size: 22px;
+    }
+    .title-xl{
+        font-size: 26px;
+    }
+    input {
+        width: 20px;
+        height: 24px;
+        
+    }                                  
+                   
+    
+  } 
