ajustes en icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,7 @@ textarea {
 .fa-heart {
     background-color: #F56565;
 }
-.fa-globe-americas {
+.fa-globe-americas, .fa-leaf {
     background-color: #2C9E4B;
 }
 .fa-star {
