--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,6 @@ a {
     grid-template-rows: repeat(auto, 1fr);
     grid-gap: 1rem 1rem;
 }
-
-/* .card-price {
-    display: flex;
-} */
 .center {
     text-align: center;
 }
@@ -108,15 +104,8 @@ nav {
     height: 20rem;
 }
 .hero .content {
-    padding-top: 0.5rem;
+    padding: 0.5rem 15rem 0rem 15rem;
     margin: 0rem 10rem 0rem 10rem;
-    text-align: center;
-}
-.hero-help{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.9),rgba(255, 217, 0, 0.2)), url(../image/hero-help.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 20rem;
     text-align: center;
 }
 /*Hero home*/
@@ -266,37 +255,37 @@ td, th {
 
 .table-price {
     text-align: center;
-
 }
-/*form*/
-.form-box {
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 1rem;
-}
-
 label {
     display: block;
     font-weight: 600;
 }
 input {
-    width: auto;
+    width:100%;
+    margin-top: 0.5rem;
     height: 35px;
     outline: none;
     font-size: 1rem;
     font-weight: 400;
-    padding: 0.8rem 12rem 0.8rem 1.2rem;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+    padding-left: 0.5rem;
+    border-radius: 15px;
     border-radius: 15px;
     border: 0.1rem solid #e0e0e0;
     background-color: #f7f7f7;
 }
 textarea {
-    width: auto;
+    width: 100%;
     height: 250px;
+    margin-top: 0.5rem;
     font-size: 1rem;
-    font-weight: 200;
+    font-weight: 400;
+    font-family: 'Inter', sans-serif;
     color: #1d1d1d;
-    padding: 0.8rem 12rem 0.8rem 1.2rem;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
+    padding-left: 0.5rem;
     border-radius: 15px;
     border: solid 0;
     background-color: #f7f7f7;
@@ -419,22 +408,6 @@ textarea {
     display: flex;
     justify-content: center;
 }
-.card-text .fa-lemon {
-    
-    display: flex;
-    justify-content: center;
-}
-
-/* .card-layout {
-    margin: 4rem 0rem 4rem 0rem;
-    display: flex;
-    justify-content: space-around;
-} */
-/* .team-layout {
-    display: grid;
-    grid-template-columns: auto auto auto auto; 
-    grid-gap: 4rem 4rem;
-} */
 /*spacing*/
 .gap-tb-item-025 {
     margin: 0.25rem 0 0.25rem 0;
@@ -508,8 +481,91 @@ footer {
     color: #303030;
 }
 
-@media (max-width: 600px) {
-   
+@media screen and (max-width:992px) {
+    .container-hero{
+        width: 100%;
+    }   
+    .hero-background-home {
+        border-radius: 2rem;
+        background-image: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.4)), url(/image/hero-home.jpg);
+        background-position: 50% 70%;
+        background-color: #fff;
+        box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 40rem;  
+    }
+    .hero-home {
+        padding-top: 4rem;
+        display: flex;
+        align-items: center;
+    }  
+    .hero-home button {
+        width: 100%;
+    } 
+    .hero-page {
+        height: 28rem;
+        border-radius: 2rem;
+    }
+    .hero .content {
+        padding: 3rem 4rem 0rem 4rem;
+        margin: 0rem 1rem 0rem 1rem;
+        text-align: center;
+    }
+    .grid-card-x4 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .grid-card-x3 {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .grid-card-x2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .grid-card-x2-1{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .card-mid {
+        padding: 2rem;
+    }
+    .card-wide {
+        padding: 0.2rem;
+    }               
+    .content-card {
+        padding: 1rem;
+    }
+    .card-text {
+        padding: 1rem;
+    }
+    .table-feature{
+        padding-left: 2rem;
+    }
+    footer {
+        border-top-left-radius: 2rem;
+        border-top-right-radius: 2rem;
+    }
+    .footer-box div {
+        margin: 1rem;
+        display: block;
+    }
+    .card-wide a{
+        display: inline; 
+    }
+    .logos img{
+        display: inline;
+        height: 4rem;
+        width: 100%;
+        margin: 1rem;
+        object-fit:fill;
+    }
+    
+    .logos{
+        display: flex;
+    }
+    
+}
+
+@media screen and (max-width: 600px) {
+
     .container-hero{
         width: 100%;
     }
@@ -523,8 +579,9 @@ footer {
         background-repeat: no-repeat;
         height: 40rem;  
     }
-    hero-page {
-        border-radius: 1rem;
+    .hero-page {
+        border-radius: 2rem;
+        height: 20rem; 
     } 
     .hero-home {
         padding-top: 4rem;
@@ -535,8 +592,8 @@ footer {
         width: 100%;
     }
     .hero .content {
-        padding-top: 0.5rem;
-        margin: 0rem 3rem 0rem 3rem;
+        padding: 0.5rem 0.5rem 0rem 0.5rem;
+        margin: 0rem 1rem 0rem 1rem;
         text-align: center;
     }
     .grid-card-x4 {
@@ -582,6 +639,9 @@ footer {
     table {
         width: 800px;
     }
+    .table-feature{
+        padding-left: 2rem;
+    }
     .title {
         font-size: 24px;
     }
@@ -592,10 +652,18 @@ footer {
         font-size: 26px;
     }
     input {
-        width: 20px;
-        height: 24px;
-        
-    }                                  
-                   
-    
+        height: 24px; 
+    }
+    .card-mid {
+        padding: 1.2rem;
+    }
+    .card-wide {
+        padding: 1.2rem;
+    }               
+    .content-card {
+        padding: 1rem;
+    } 
+    .card-text {
+        padding: 1.2rem;
+    }                  
   } 
