--- a/css/styles.css
+++ b/css/styles.css
@@ -398,12 +398,19 @@ textarea {
     text-align: center;
     border-radius: 1rem;
     overflow: hidden;
+    transition: box-shadow, transform, 0.2s;
+    cursor: pointer;
 }
 .card-store img {
     width: 100%;
     height: 14rem;
     object-fit: cover;
     object-position: 50% 50%;
+}
+.card-store {
+    background-color: #fdfdfd;
+    transform: translateY(-4px);
+    transition: transform .2s;
 }
 .card-text {
     padding: 4rem;
