--- a/css/styles.css
+++ b/css/styles.css
@@ -7,23 +7,25 @@
 
 body {
     font-family: 'Inter', sans-serif;
-    background-color: #f7f7f7;
+    background-color: #f7f7f7 !important;
     animation:fadeIn;
     animation-duration: 1.2s;
 }
 a {
-    text-decoration: none;
-    color: #1d1d1d;
+    text-decoration: none !important;
+    color: #1d1d1d !important;
     cursor: pointer;
 }
-
-    
     /*layout*/
-.container {
+/* .container {
     margin-left: 7%;
     margin-right: 7%;
     margin-top: 2rem;
     margin-bottom: 2rem;
+} */
+.container-md{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .container-hero{
     width: 44%;
@@ -77,20 +79,19 @@ figure img{
     height: 3rem;
 }
 nav {
-    background-color: hsla(0, 0%, 100%, 0.9);
+    /* background-color: hsla(0, 0%, 100%, 0.9);
     backdrop-filter: blur(0.5rem);
     display: flex;
     align-items: center;
     height: 4rem;
     width: 100%;
     position: fixed;
-    padding: 1rem 8% 1rem 8%;
-    margin-bottom: 5rem;
+    padding: 1rem 8% 1rem 8%;  */
     z-index: 1;  
 }
 /*Hero home*/
 .hero-background-home {
-    border-radius: 6rem;
+    border-radius: 0rem 0rem 6rem 6rem;
     background-image: url(../image/hero-home.jpg);
     background-position: 88% 50%;
     background-color: #fff;
@@ -104,8 +105,9 @@ nav {
     background-image: url(../image/hero-1.svg);
     background-size: cover;
     background-position: 100% 50%;
-    border-radius: 6rem;
+    border-radius: 0rem 0rem 6rem 6rem;
     height: 20rem;
+    margin-top: 6rem;
 }
 .hero .content {
     padding: 0.5rem 15rem 0rem 15rem;
@@ -127,9 +129,9 @@ nav {
 .hero-home p{
     padding: 0rem 0rem 2rem 0rem;
 }
-.hero {
+/* .hero {
     padding-top: 10rem;
-}
+} */
 
 /*Typography*/
 .white-color {
@@ -173,7 +175,7 @@ nav {
 /*button section*/
 .button-primary a {
     text-decoration: none;
-    color: #ffffff;
+    color: #ffffff !important;
 }
 .button-primary {
     width: 100%;
@@ -224,7 +226,7 @@ nav {
 
 
 /*table*/
-table {  
+.table-plan {  
     width: 100%;
     table-layout: fixed;
     border-collapse: collapse;
@@ -264,7 +266,7 @@ label {
     display: block;
     font-weight: 600;
 }
-input {
+/* input {
     width:100%;
     margin-top: 0.5rem;
     height: 35px;
@@ -278,7 +280,7 @@ input {
     border-radius: 15px;
     border: 0.1rem solid #e0e0e0;
     background-color: #f7f7f7;
-}
+} */
 textarea {
     width: 100%;
     height: 250px;
@@ -296,7 +298,7 @@ textarea {
 }
 /*cards*/
 .card-wide {
-    background-color: #FFf;
+    background-color: #ffffff;
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
@@ -306,14 +308,14 @@ textarea {
     align-items: center;
 }
 .card-mid {
-    background-color: #FFf;
+    background-color: #ffffff;
     padding: 2rem;
     border-radius: 1rem;
     box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 }
 .card-features {
     padding: 2rem;
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 1rem;
     box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
     display: inline;
@@ -499,15 +501,6 @@ footer {
 }
 
 @media screen and (max-width:992px) {
-      nav ul {
-        background: rgb(255, 255, 255);
-
-    }
-      nav ul {
-        margin-top: 10rem;
-        display: flex;
-        flex-wrap:wrap;
-    }
     .container-hero{
         width: 100%;
     }   
@@ -522,7 +515,7 @@ footer {
         height: 40rem;  
     }
     .hero-home {
-        padding-top: 4rem;
+        /* padding-top: 4rem; */
         display: flex;
         align-items: center;
     }  
@@ -593,16 +586,6 @@ footer {
 }
 
 @media screen and (max-width: 600px) {
-    nav ul {
-        background: rgb(255, 255, 255);
-
-    }
-      nav ul {
-        margin-top: 11rem;
-        display: flex;
-        flex-wrap:wrap;
-        flex-direction: column;
-    }
     .container-hero{
         width: 100%;
     }
