--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,12 @@ body {
     animation:fadeIn;
     animation-duration: 1.2s;
 }
-a {
+section a {
+    text-decoration: none !important;
+    color: #1d1d1d !important;
+    cursor: pointer;
+}
+footer a {
     text-decoration: none !important;
     color: #1d1d1d !important;
     cursor: pointer;
@@ -24,8 +29,8 @@ a {
     margin-bottom: 2rem;
 } */
 .container-md{
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 .container-hero{
     width: 44%;
@@ -62,21 +67,22 @@ a {
     text-align: center;
 }
 /*Menu*/
-ul {
+ /* ul {
     list-style: none;
     display: flex;
+    justify-content: flex-end;
 
-}
+} */
 li {
-    padding: 1rem;
+    padding: 0rem 0.5rem 0rem 0.5rem;
     text-align: center;
 }
-li a:hover {
+/* li a:hover {
     color: #202020;
     text-decoration: underline;
-}
+} */
 figure img{
-    height: 3rem;
+    height: 2.8rem;
 }
 nav {
     /* background-color: hsla(0, 0%, 100%, 0.9);
@@ -107,7 +113,10 @@ nav {
     background-position: 100% 50%;
     border-radius: 0rem 0rem 6rem 6rem;
     height: 20rem;
-    margin-top: 6rem;
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hero .content {
     padding: 0.5rem 15rem 0rem 15rem;
@@ -226,8 +235,10 @@ nav {
 
 
 /*table*/
-.table-plan {  
+table{
     width: 100%;
+}
+.table-plan {  
     table-layout: fixed;
     border-collapse: collapse;
     border: 0rem  solid#2c2c2c;
@@ -237,7 +248,7 @@ nav {
 }
 td, th {
     padding: 1.5rem;
-    border:  0rem solid #f5f5f525;
+    border:  0rem solid #f5f5f525; 
 }
 .table-feature {
     font-weight: 500;
@@ -246,10 +257,14 @@ td, th {
 }
 .table-item {
     text-align: center;
-
 }
 .table-title {
     font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+}
+.table-title-s {
+    font-size: 1.2rem;
     font-weight: 700;
 }
 .fa-check-circle {
@@ -262,10 +277,10 @@ td, th {
 .table-price {
     text-align: center;
 }
-label {
+/* label {
     display: block;
     font-weight: 600;
-}
+} */
 /* input {
     width:100%;
     margin-top: 0.5rem;
@@ -281,7 +296,7 @@ label {
     border: 0.1rem solid #e0e0e0;
     background-color: #f7f7f7;
 } */
-textarea {
+/* textarea {
     width: 100%;
     height: 250px;
     margin-top: 0.5rem;
@@ -295,7 +310,7 @@ textarea {
     border-radius: 15px;
     border: solid 0;
     background-color: #f7f7f7;
-}
+} */
 /*cards*/
 .card-wide {
     background-color: #ffffff;
@@ -514,6 +529,11 @@ footer {
         background-repeat: no-repeat;
         height: 40rem;  
     }
+    .hero-page{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     .hero-home {
         /* padding-top: 4rem; */
         display: flex;
@@ -601,7 +621,10 @@ footer {
     }
     .hero-page {
         border-radius: 2rem;
-        height: 20rem; 
+        height: 20rem;
+        display: flex;
+        justify-content: center;
+        align-items: center; 
     } 
     .hero-home {
         padding-top: 4rem;
@@ -651,7 +674,7 @@ footer {
     .footer-box div {
         margin: 1rem;
     }
-    .table{
+    .table-plan{
 	    overflow-y: hidden;
         overflow-x: auto;
         border-radius: 1rem;
