--- a/css/styles.css
+++ b/css/styles.css
@@ -37,9 +37,9 @@ footer a {
     margin-right: 8% !important;
 }
 .container-hero{
-    width: 44%;
-    margin-left: 8%;
-    margin-right: 8%;
+    width: 30%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 .flex-space-between {
     display: flex;
@@ -102,8 +102,8 @@ nav {
 /*Hero home*/
 .hero-background-home {
     border-radius: 0rem 0rem 6rem 6rem;
-    background-image: url(../image/hero-home.jpg);
-    background-position: 88% 50%;
+    background-image: url(../image/hero-home-2.jpg);
+    background-position: 80% 50%;
     background-color: #fff;
     box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
     background-size: 34%;
@@ -167,6 +167,10 @@ nav {
 }
 .subtitle {
     font-size: 26px;
+    font-weight: 600;    
+}
+.subtitle-s {
+    font-size: 22px;
     font-weight: 600;    
 }
 .text-size-normal {
@@ -236,7 +240,9 @@ nav {
 .button-secondary:hover {
     color: #00509d;
 }
-
+.flex {
+    display: flex;
+}
 
 /*table*/
 table{
@@ -368,7 +374,7 @@ td, th {
 .fa-heart {
     background-color: #F56565;
 }
-.fa-globe-americas, .fa-leaf, .fa-pied-piper-pp {
+.fa-globe-americas, .fa-leaf {
     background-color: #2C9E4B;
 }
 .fa-star {
