--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,9 +1,7 @@
-@import "https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap";
-
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 * {
-	margin: 0%;
-	padding: 0%;
+    margin: 0%;
+    padding: 0%;
 }
 body {
 	font-family: 'Inter', sans-serif !important;
