--- a/css/styles.scss
+++ b/css/styles.scss
@@ -12,8 +12,12 @@ $color: (
     'gray-dark':#1d1d1d,
     'back':rgb(247, 247, 247),
 );
-@mixin name {
-	
+@mixin cards {
+	padding: 2rem;
+	border-radius: 1rem;
+	text-align: center;
+	overflow: hidden;
+	background-color: map-get($map: $color, $key: light);	
 }
 * {
     margin: 0%;
@@ -273,9 +277,8 @@ th {
 	text-align: center;
 }
 .card-wide {
+	@include cards;
 	background-color: map-get($map: $color, $key: light);
-	padding: 2rem;
-	border-radius: 1rem;
 	box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 	a {
 		display: flex;
@@ -288,15 +291,13 @@ th {
 	}
 }
 .card-mid {
+	@include cards;
 	background-color: map-get($map: $color, $key: light);
-	padding: 2rem;
-	border-radius: 1rem;
 	box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 }
 .card-features {
-	padding: 2rem;
+	@include cards;
 	background-color: map-get($map: $color, $key: light);
-	border-radius: 1rem;
 	box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
 	display: inline;
 }
@@ -340,21 +341,14 @@ th {
 	color: map-get($map: $color, $key: bluni);
 }
 .card-team {
-	padding: 2rem;
-	background-color: map-get($map: $color, $key: light);
-	text-align: center;
-	border-radius: 1rem;
+	@include cards;
 	img {
 		width: 12rem;
 		height: 12rem;
 	}
 }
 .card-product {
-	background-color:map-get($map: $color, $key: light);
-	padding: 1rem;
-	text-align: center;
-	border-radius: 1rem;
-	overflow: hidden;
+	@include cards;
 	transition: box-shadow, transform, 0.2s;
 	cursor: pointer;
 	img {
@@ -370,11 +364,7 @@ th {
 	}
 }
 .card-store {
-	background-color: map-get($map: $color, $key: light);
-	padding: 2rem;
-	text-align: center;
-	border-radius: 1rem;
-	overflow: hidden;
+	@include cards;
 	transition: box-shadow, transform, 0.2s;
 	cursor: pointer;
 	img {
@@ -384,16 +374,13 @@ th {
 		object-position: 50% 50%;
 	}
 	&:hover {
-		background-color: map-get($map: $color, $key: light);
+		background-color: #fdfdfd;
 		transform: translateY(-4px);
 		transition: transform .2s;
 	}
 }
 .card-text {
-	padding: 4rem;
-	background-color: map-get($map: $color, $key: light);
-	text-align: center;
-	border-radius: 1rem;
+	@include cards;
 	margin-left: 1rem;
 	margin-right: 1rem;
 	.fa-seedling {
